Spacing fix

--- a/src/css/_gallery.scss
+++ b/src/css/_gallery.scss
@@ -39,7 +39,7 @@ $next-bg: $islands-bg;
 		width: 100%;
 		overflow: hidden;
 		line-height: 0;
-		bottom: -1%;
+		bottom: -0.15em;
 	}
 
 	svg {
